[package]
name = "tgl-cli"
version = "0.17.0"
edition = "2021"
description = "A simple Toggl command line client."
homepage = "https://github.com/blachniet/tgl"
repository = "https://github.com/blachniet/tgl"
license = "MIT"
keywords = ["toggl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tgl"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "4.0.23", features = ["derive"] }
dialoguer = "0.10.2"
elsa = "1.7.0"
keyring = "1"
thiserror = "1.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
